Using Eve API Cache instead of direct API

--- a/background.html
+++ b/background.html
@@ -19,7 +19,8 @@ function getEveGateUrl() {
 }
 
 function getFeedUrl() {
-    return "http://api.eve-online.com/char/MailMessages.xml.aspx";
+//    return "http://api.eve-online.com/char/MailMessages.xml.aspx";
+    return "http://api.evsco.net/char/MailMessages.xml.aspx";
 }
 
 function isEveGateUrl(url) {
