--- a/background.html
+++ b/background.html
@@ -6,7 +6,7 @@ var animationSpeed = 10; // ms
 var canvas;
 var canvasContext;
 var loggedInImage;
-var pollIntervalMin = 1000 * 60 * 30;    // 30 minutes
+var pollIntervalMin = 1000 * 60 * 5;     // 5 minutes
 var pollIntervalMax = 1000 * 60 * 60;    // 1 hour
 var requestFailureCount = 0;    // used for exponential backoff
 var requestTimeout = 1000 * 2;    // 5 seconds
@@ -161,7 +161,7 @@ function getInboxCount(onSuccess, onError) {
                     handleError();
                     return;
                 }
-                var fullCount = xmlDoc.evaluate("count(/eveapi/result/rowset/row)",
+                var fullCount = xmlDoc.evaluate("count(/eveapi/result/rowset/row[@read=0])",
                         xmlDoc, null, XPathResult.NUMBER_TYPE, null);
                 if (fullCount) {
                     console.log("got "+fullCount.numberValue+" messages");
